# poke-spearify

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
samples/: charizard_bad.json  charizard_without_desc.json  shakespeare_translation.json  shakespeare_translation_bad.json
src/: lib.rs  main.rs  server.rs
src/controllers/: health_check.rs  mod.rs  pokemon.rs
src/middlewares/: logger.rs  mod.rs
src/middlewares/extension_types/: mod.rs
src/wrappers/: errors.rs  mod.rs  pokemon.rs  shakespeare.rs
tests/: health_check.rs  pokemon.rs
